# AI-Detection-Writting

./: README.md  pyproject.toml
model/: tokenizer.pickle
model/logs/: events.out.tfevents.1703812515.Adrians-MacBook-Pro.local.9705.0  events.out.tfevents.1703812719.Adrians-MacBook-Pro.local.9827.0
model/mlruns/0/: meta.yaml
model/mlruns/0/6e32c5943b2d4355adbf01d6b4309056/: meta.yaml
model/mlruns/0/9d2ee0d45c944bd099827436a105c88b/: meta.yaml
model/mlruns/0/f4c9ed933d1d4ab095d2a6f15865a94b/: meta.yaml
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/3b48896143914fc0839aae48aa8967d1/: meta.yaml
notebooks/mlruns/0/43889cf3ced04854971cef9cf9c569af/: meta.yaml
notebooks/mlruns/0/5c21151da4f74e00a1c9dc52519619a1/: meta.yaml
notebooks/mlruns/0/76a230ba426841b39753dda735e1ae8c/: meta.yaml
notebooks/mlruns/0/7fc1bbe60310445c8abb2db9e7680281/: meta.yaml
notebooks/mlruns/0/9513da81b3104eb1862f36a56aa20101/: meta.yaml
notebooks/mlruns/0/b25e1d7b789542d997899d15ec6e6abc/: meta.yaml
notebooks/mlruns/356387870466945356/: meta.yaml
notebooks/mlruns/356387870466945356/838146c4e7364b12b5dae9918aa2bc99/: meta.yaml
notebooks/mlruns/356387870466945356/9d11cc9d75794318aa91deab91fbff00/: meta.yaml
notebooks/mlruns/356387870466945356/a372768b26d543bfb4a109402c90bc41/: meta.yaml
py/: data_inspector.py  data_loader.py  data_merger.py  data_preprocessor.py  data_splitter_balancer.py  data_visualizer.py  main.py  streamlit_app.py  text_data_classifier.py  text_similarity.py  word2vec_transformer.py
(+95 files in other folders)
